Adapting icon fix from http://jsfiddle.net/isherwood/0j76700t found via http://stackoverflow.com/questions/31322331/vertically-center-a-glyphicon-over-an-img-in-a-div/

--- a/style.css
+++ b/style.css
@@ -12,18 +12,24 @@ Template: 	simple-bootstrap
 
 /* Media Player */
 .playpause.featured-image {
-    display: table;
+    position: relative;
 }
 .playpause-button.glyphicon {
     position: absolute;
-    display: table-cell;
-    align-content: center;
-    vertical-align: middle;
-    text-align: center;
-    font-size: 60px;
-    width: 100%;
-    color: rgba(255, 255, 255, 0.6);
+    top: 50%;
+    margin-top: -40px;
+    
+    margin-top: -40px; /* half icon's height */
+    left: 50%;
+    margin-left: -40px; /* half icon's width */
     z-index: 999;
+    font-size: 80px;
+    width: 100%;
+    color: #ffffff;
+    opacity: .75;
+}
+.playpause-button:hover .glyphicon {
+    opacity: 1;
 }
 
 /** Shrink podcast titles **/
